# ChangeLog for app-emulation/qemu-kvm
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-kvm/Attic/ChangeLog,v 1.30 2010/06/15 18:41:40 cardoe Exp $

*qemu-kvm-0.12.4-r1 (15 Jun 2010)

  15 Jun 2010; Doug Goldstein <cardoe@gentoo.org>
  +qemu-kvm-0.12.4-r1.ebuild,
  +files/qemu-kvm-0.12.4-large-virtio-corruption.patch:
  Fix issue with large virtio disks getting corrupted. bug #321005

  12 Jun 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  qemu-kvm-9999.ebuild:
  [app-emulation/qemu-kvm-9999] Restricted targets to x86_64-softmmu after
  upstream informed that's the only supported target for qemu-kvm.
  Should fix bug 317205 and bug 318413.

*qemu-kvm-0.12.4 (18 May 2010)

  18 May 2010; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -qemu-kvm-0.12.2-r2.ebuild, +qemu-kvm-0.12.4.ebuild:
  Version bump

*qemu-kvm-0.12.3-r1 (03 Apr 2010)

  03 Apr 2010; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +qemu-kvm-0.12.3-r1.ebuild,
  +files/qemu-kvm-0.12.3-fix-crash-with-sdl.patch,
  +files/qemu-kvm-0.12.3-include-madvise-defines.patch:
  Include madvise defines, fixes bug 305785, include virtio-large-iovecs
  patch, fixes bug 308451, include upstream fix for crash with sdl as
  default sound option, fixes sound issues of bug 294269

  28 Mar 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  qemu-kvm-9999.ebuild, -files/qemu-kvm-9999-sysconfigdir.patch:
  Remove the sysconfigdir patch from qemu-kvm-9999 as the fix was applied
  upstream.
  Fixes bug 310979 - thanks to Jeff Kowalczyk <jtk@yahoo.com>.

  19 Mar 2010; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  qemu-kvm-0.12.2-r2.ebuild, qemu-kvm-0.12.3.ebuild:
  Also add warning and dont install useless files without
  QEMU_SOFTMMU_TARGETS=x86_64

  19 Mar 2010; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  qemu-kvm-0.12.2-r2.ebuild, qemu-kvm-0.12.3.ebuild: