@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-kvm/Attic/qemu-kvm-0.12.3-r1.ebuild,v 1.1 2010/04/03 13:51:55 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-kvm/Attic/qemu-kvm-0.12.3-r1.ebuild,v 1.2 2010/06/30 21:46:32 truedfx Exp $
 
 EAPI="2"
 
@@ -180,8 +180,8 @@ src_configure() {
 		${conf_opts} \
 		--audio-drv-list="${audio_opts}" \
 		--target-list="${softmmu_targets} ${user_targets}" \
-		--cc=$(tc-getCC) \
-		--host-cc=$(tc-getBUILD_CC) \
+		--cc="$(tc-getCC)" \
+		--host-cc="$(tc-getBUILD_CC)" \
 		|| die "configure failed"
 
 		# this is for qemu upstream's threaded support which is
