@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.77 2010/01/05 23:58:40 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.78 2010/06/30 21:46:32 truedfx Exp $
+
+  30 Jun 2010; Harald van Dĳk <truedfx@gentoo.org> qemu-0.10.3.ebuild,
+  qemu-0.10.4.ebuild, qemu-0.10.5.ebuild, qemu-0.10.6.ebuild,
+  qemu-0.11.0.ebuild, qemu-0.11.1.ebuild:
+  Fix quoting
 
   05 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org> qemu-0.10.3.ebuild,
   qemu-0.10.4.ebuild, qemu-0.10.5.ebuild, qemu-0.10.6.ebuild,
